Add --add-opens when running bundle jar (#105)
Prevent Java 11's illegal access warnings by adding two --add-opens
options when the VERDICT plugin runs the bundle jar, like our
Dockerfile already does when running the jar.

Also update parent pom as well.  Improve 2 comments.  Update 3 deps to
newer versions (micrometer, saxon, ant).  Update 4 plugins to newer
version (spotless, sortpom, download, tycho).